# paper-doyle2025

./: README.md  env.yml  env_server.txt  setup.cfg  setup.py
configs/: README.md  config.yaml  config_clinical.yaml
configs/callbacks/: default.yaml  model_checkpoint.yaml
configs/data/: README.md  block1_aperio_including_philips_extra_slides.yaml  block1_p1000_including_philips_extra_slides.yaml  cv_split.yaml  data_selection.yaml  default.yaml  meta_data_orig_precision.yaml  sloane.yaml  target_data.yaml
configs/data_prep/: default.yaml
configs/experiment/: default.yaml
configs/hydra/: default.yaml
configs/kfold_metrics_collector/: default.yaml
configs/logger/: csv.yaml  default.yaml  mlflow.yaml  tensorboard.yaml  wandb.yaml
configs/lr_scheduler/: cosine_annealing.yaml  cosine_annealing_warm_restarts.yaml  reduce_on_plateau.yaml  step_lr.yaml
configs/metrics/: metrics.yaml
configs/metrics_trackers/: default.yaml
configs/norms/: imagenet.yaml
configs/paths/: default.yaml
configs/pre_transforms/: default.yaml
configs/pretrain/:  resnet50_moco_imagenet_with_moco.yaml  ciga.yaml  ciga_march21.yaml  hissl.yaml  ibotvit.yaml  r18_imagenet.yaml  r50_multitask.yaml  r50_trained_on_imagenet_with_moco.yaml
configs/sampler/: dfsubset_batchsampler.yaml  dfsubset_weighted_batchsampler.yaml  image_batchsampler.yaml
configs/tiling/: cls.yaml
configs/trainer/: cls_trainer.yaml
drop/data/: datamodule.py  (+6 more)
scripts/: clinical.sh  clinical_extended.sh  img_outer_split.sh  integrative_outer_split.sh  test_ensemble_img_outer.sh  test_ensemble_int_outer.sh
(+84 files in other folders)
