[metadata]
author= NKI AI for Oncology Lab
author_email= s.doyle@nki.nl
name= drop
version= 1.0.0
description= DCIS Risk and Outcome Prediction Pipeline
url= https://github.com/NKI-AI/DROP-public
license= MIT license
keywords= MIL, deepMIL, histopathology, classification, detection
classifiers=
    "Development Status :: 2 - Pre-Alpha"
    "Natural Language :: English"
    'Intended Audience :: Developers'
    'License :: OSI Approved :: MIT License'
    "Programming Language :: Python :: 3"
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
[options]
zip_safe = False
include_package_data = True
# this is to install multiple root directories
packages =
    drop
package_dir =
    drop      = drop
python_requires= >=3.7.9
install_requires =
    dlup @ git+https://github.com/NKI-AI/dlup.git
[options.extras_require]
dev =
    black==22.3.0
    numpydoc
    pylintq
    pytest
[options.packages.find]
[aliases]
test = pytest
